src/test/ui/nll/ty-outlives/ty-param-fn-body.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn-body.rs:19:5
   |
LL |     outlives(cell, t)
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
